Fixed server.js : vercel.json : passport.js

--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,8 @@
     }
   ],
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "server.js"
-    }
+    { "source": "/api/auth/(.*)", "destination": "server.js" },
+    { "source": "/api/tasks/(.*)", "destination": "server.js" },
+    { "source": "/(.*)", "destination": "server.js" }
   ]
 }
