Update: Vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,16 @@
   ],
   "rewrites": [
     {
+      "source": "/api/auth/(.*)",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/(.*)",
-      "destination": "server.js"
+      "destination": "/server.js"
     },
     {
       "source": "/(.*)",
-      "destination": "server.js"
+      "destination": "/server.js"
     }
   ]
 }
